# xgboost_test

./: CMakeLists.txt
data/: adult.data.csv  adult1.data.csv  adult2.data.csv  adult3.data.csv  adult4.data.csv  car.data.csv  make_sample.py  tae1.data  tae2.data
src/: XGBoost.cpp  XGBoost.h  main.cpp
